fixed spacing in list

--- a/ExpenseTracker/client/new-expense-tracker-ui/src/index.css
+++ b/ExpenseTracker/client/new-expense-tracker-ui/src/index.css
@@ -126,3 +126,8 @@ header{
   padding: 2rem;
 }
 
+.table-hover tbody tr:hover {
+  background-color: rgb(0, 136, 255) !important; /* Override Bootstrap's default hover */
+}
+
+
